# bazel-stm32

./: BUILD  MODULE.bazel  README.md  rules.bzl  stm32_famillies.bzl
.github/workflows/: stm32F4.yml
Examples/STM32F401CCU/: .bazelrc  .mxproject  BUILD.bazel  MODULE.bazel  Makefile  STM32F401CCU_CI.ioc
Examples/STM32F401CCU/Core/: BUILD.bazel
Examples/STM32F401CCU/Core/Src/: main.c
Examples/STM32F401CCU/Drivers/: BUILD.bazel
flash/: BUILD  flash.bzl
mcu/: BUILD  stm32_famillies.bzl
templates/: BUILD.bazel.tpl  rules.bzl.tpl
