load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "Inc",
    hdrs = glob([ "Inc/*.h" ]),
    srcs = glob([ "Inc/*.h" ]),
    strip_include_prefix = "Inc",
    include_prefix = "",
    visibility = ["//visibility:public"],
)

cc_library(
    name = "Core",
    srcs = glob([ "Inc/*.h", "Src/*.c" ]),
    hdrs = glob([ "Inc/*.h" ]),
    includes = [ "Inc/" ],
    deps = [ "//Drivers:Drivers" ],
    strip_include_prefix = "",
    include_prefix = "",
    linkstatic = True,
    visibility = ["//visibility:public"],
)

